# firework-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml  rust.yml
examples/: fountain.rs  heart.rs  vortex.rs
src/: config.rs  demo.rs  firework.rs  fireworks.rs  lib.rs  main.rs  particle.rs  term.rs  utils.rs
