[package]
name = "firework-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.27.0"
glam = "0.25.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[[bin]]
name = "firework"
path = "src/bin/firework/main.rs"

[lib]
name = "firework"
path = "src/lib.rs"
crate-type = ["lib"]
bench = false

[[example]]
name = "fountain"

[[example]]
name = "vortex"