[package]
name = "firework-rs"
version = "0.2.0"
authors = ["Wayoung7 <https://github.com/Wayoung7>"]
edition = "2021"
description = "A cross-platform ascii-art firework simulator in terminal"
readme = "README.md"
repository = "https://github.com/Wayoung7/firework-rs"
license = "MIT"
keywords = ["ascii", "fireworks", "terminal", "cli", "simulation"]
categories = ["command-line-utilities"]
exclude = ["gif/*"]

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.27.0"
glam = "0.25.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[[bin]]
name = "firework"
path = "src/bin/firework/main.rs"

[lib]
name = "firework_rs"
path = "src/lib.rs"
crate-type = ["lib"]
bench = false

[[example]]
name = "fountain"

[[example]]
name = "vortex"

[[example]]
name = "heart"